--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,7 @@
         // set up model objects
         var library = new Songs(songData);
         var songQueue = new SongQueue();
-        var app = new AppModel({library: library,
-                                songQueue: songQueue});
+        var app = new AppModel({library: library});
 
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
