Added Bootstrap and queue now has autoplay

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+ <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+
+</head>
   <body>
     <!-- Scripts may be placed anywhere on a page. But FYI, they block rendering of elements
      below them until after the scripts load-->
