Adding more filez

--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,16 @@
  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 
 </head>
-  <body>
+  <body class="container">
     <!-- Scripts may be placed anywhere on a page. But FYI, they block rendering of elements
      below them until after the scripts load-->
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
+    <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="bower_components/requirejs/require.js"></script>
+    <script src="bower_components/backbone.localstorage/backbone.localstorage.js"></script>
+    <script src="data/backbone-localstorage.js"></script>
 
     <script src="data/data.js"></script>
 
@@ -37,6 +41,7 @@
 
         // put the view onto the screen
         $('body').append(appView.render());
+        localStorage['yo'] = 'hey';
       });
     </script>
   </body>
